tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_24.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((+ (+ (0 - 1223))) - ((- (y - 0)) * ((2 * y) + (y * 2))));
               z := (((- (200 - x)) DIV ((- y) - (1223 MOD x))) MOD ((+ (1223 * 2)) + ((1 - y) DIV (+ 200))));
  (* error *)  r := (~ ((- (+ r)) = ((200 MOD 200) - (2 + 0))));
               r := (((- (1 * x)) + ((1 + 200) * (x DIV 200))) >= (- (- (- 1223))));
               z := (+ (((x MOD y) - (z MOD z)) DIV ((0 DIV x) MOD (0 + 2))));
               y := (+ (+ ((+ z) - (x + y))));
               p := ((((1223 + 1) * (y MOD 0)) DIV (- (z DIV 2))) <= ((- (- 200)) MOD (- (1 + 1))));
               r := ((((200 DIV 2) MOD (1223 DIV 2)) > (+ (+ 1223))) OR (((0 - 0) < (1 DIV x)) OR ((1 + 2) < (x + 0))));
               z := ((((- y) * (2 DIV 0)) - ((y - 2) MOD (+ z))) MOD (((x * 1) DIV (0 MOD 200)) * ((x - z) MOD (200 MOD 1223))));
               z := ((((200 * 200) DIV (+ z)) DIV (- (- x))) MOD ((- (- 2)) * (+ (- x))))
END Test13.